--- a/GenericCollections/GenericCollections.csproj
+++ b/GenericCollections/GenericCollections.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include="C:\Repos\GenericCollections\Day 1 Notes 1.28.2020.docx" Link="Day 1 Notes 1.28.2020.docx" />
+    <Compile Include="C:\Users\Owner\Documents\Max Bootcamp\Program.cs" Link="Program.cs" />
+  </ItemGroup>
+
 </Project>
